--- a/customer-client/package.json
+++ b/customer-client/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@fontsource/roboto": "^4.2.2",
+    "@material-ui/core": "^5.0.0-alpha.27",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -11,6 +14,7 @@
     "npm": "^7.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ratings-declarative": "^3.4.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
