--- a/customer-client/package.json
+++ b/customer-client/package.json
@@ -10,10 +10,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^8.2.0",
     "install": "^0.13.0",
     "npm": "^7.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-map-gl": "^6.1.11",
     "react-ratings-declarative": "^3.4.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
