--- a/vendor-client/public/manifest.json
+++ b/vendor-client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "BWIKY",
-  "name": "INFO30005 BWIKY Project Customer Client",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
