--- a/vendor-client/package.json
+++ b/vendor-client/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "customer-client",
+  "name": "vendor-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "@fontsource/roboto": "^4.2.2",
-    "@material-ui/core": "^5.0.0-alpha.27",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
+    "@material-ui/core": "^4.11.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "dotenv": "^8.2.0",
-    "install": "^0.13.0",
-    "npm": "^7.6.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-map-gl": "^6.1.11",
-    "react-ratings-declarative": "^3.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "prettier": "2.2.1"
   }
 }
