--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
+    "express": "^4.17.1",
+    "mongoose": "5.12.3"
   },
   "devDependencies": {
     "prettier": "2.2.1"
