--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "dotenv-expand": "5.1.0",
     "express": "^4.17.1",
     "mongoose": "5.12.3",
-    "mongoose-beautiful-unique-validation": "7.1.1"
+    "mongoose-beautiful-unique-validation": "^7.1.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
