--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,27 @@
+## Mac OS
+
+# General
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+## Node
 
 # Logs
 logs
@@ -42,6 +65,9 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+
+# TypeScript v1 declaration files
+typings/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
