--- a/customer-client/package.json
+++ b/customer-client/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^17.0.1",
     "react-map-gl": "^6.1.11",
     "react-ratings-declarative": "^3.4.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
