--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,8 @@
   "scripts": {
     "start": "node app.js"
   },
-
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "express": "^4.17.1",
