--- a/customer-client/package.json
+++ b/customer-client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "install": "^0.13.0",
     "npm": "^7.6.3",
