--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,11 @@
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "5.12.3",
-    "mongoose-beautiful-unique-validation": "7.1.1"
+    "mongoose-beautiful-unique-validation": "7.1.1",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
