--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "8.5.1",
     "npm": "^7.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
